Clean code, add unit tests.